app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 */
 // Custom bootstrap variables must be set or imported *before* bootstrap.
@import "bootstrap";

 /* GLOBAL */

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.notice {
  text-align: center;
}

/* To fix nav and fotter taking up more pixels than the screen has */
.row {
  margin: 0;
}

/* NAV BAR */

.nav-container {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  list-style: none;
  width: 100%;
  background-color: #d11f66;
  height: 5rem;
  padding: 3%;
  -webkit-box-shadow: 0px 6px 0px 0px rgba(245,245,245,1);
  -moz-box-shadow: 0px 6px 0px 0px rgba(245,245,245,1);
  box-shadow: 0px 6px 0px 0px rgba(245,245,245,1);
}

.nav_container li {
  flex: 1;
}

.nav-container li:not(.logo) {
  font-family: 'Nunito Sans', sans-serif;
  font-weight: 800;
}

.nav-container a {
  text-decoration: none;
  color: #171616;
}

.nav-container a:hover {
  color: #f5f5f5;
}

.logo  {
  margin-left: 50%;
  font-family: 'Oleo Script', sans-serif;
  font-size: 350%;
}

.nav_out, .nav_up, .nav_in {
  margin-left: 3%;
}

@media screen and (max-width: 600px) {
  .nav_container {
    flex-wrap: wrap;
  }
  .nav_container > li {
    flex-basis: 50%;
    padding: 1%;
  }
}

@media screen and (max-width: 425px) {
  .nav_container > li {
    flex-basis: 100%;
    padding: 2%;
  }
}

/* WELCOME PAGE */

.welcome {
  text-align: center;
}

.welcome h1 {
  font-family: 'Nunito Sans', sans-serif;
  font-weight: 800;
  font-size: 5rem;
}

@media screen and (max-width: 770px) {
  .welcome h1 {
    font-size: 4rem;
  }
}

@media screen and (max-width: 500px) {
  .welcome h1 {
    font-size: 3rem;
  }
}

.home-logo {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.home-logo img {
  width: 450px;
  height: 450px;
}

@media screen and (max-width: 500px) {
  .home-logo img {
    width: 300px;
    height: 300px;
  }
}

.welcome-message {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  padding: 25px;
}

.browse-button {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  background-color: #d11f66;
  border: none;
}

/* LEARN HOW TO OVERRIDE BOOTSTRAP BUTTON HOVER/ACTIVE STYLE */

.browse-button a {
    text-decoration: none;
    color: #f5f5f5;
    font-family: 'Nunito Sans', sans-serif;
}

.btn-secondary:hover {
  background-color: #312f2f;
}

/* GAMES INDEX */

.index-row {
  display: flex;
  justify-content: center;
}

.card {
  background-color: #312f2f;
  margin: 1rem;
  width: 17rem;
  height: 20rem;
  padding: 5%;
  border-top: solid;
  border-top-width: 2rem;
  border-top-color: #d11f66;
}

.upload-button {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding-bottom: 35px;
}

.new-game {
  align-items: center;
  background-color: #d11f66;
  border: none;
}

.new-game a {
  text-decoration: none;
  color: #f5f5f5;
  font-family: 'Nunito Sans', sans-serif;
}

.games-listing {
  display: flex; 
  align-content: center;
  font-family: 'Nunito Sans', sans-serif;
  text-align: center;
}

.games-index-title h1 {
  font-family: 'Oleo Script', 'sans-serif';
  font-size: 85px;
  text-align: center;
  padding-bottom: 2%;
}

@media screen and (max-width: 600px) {
  .games-index-title h1 {
    font-size: 65px;
  }
}

.index-title a  {
  font-weight: 800;
  color: #d11f66;
  text-decoration: none;
}

.index-title  a:hover {
  color: #f5f5f5;
}

.index-price {
  color: #f5f5f5;
}

.index-price-label {
  font-size: 13px;
}

.card-edit a, .card-destroy a {
  font-weight: 400;
  color: #f5f5f5;
  text-decoration: none;
}

.card-edit a:hover, .card-destroy a:hover {
  color: #d11f66;
}

/* Search Bar Area */

.all-games-link a {
  color: #f5f5f5;
  text-decoration: none;
  padding-right: 10px;
  padding-left: 10px;

}

.all-games-link a:hover {
  color: #d11f66;
}

.search-bar {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  padding-bottom: 50px;
}

.search-divider {
  padding: 10px;
}

.sort-title {
  padding-right: 10px;
}

.sort-filter a {
  color: #f5f5f5;
  text-decoration: none;
}

.sort-filter a:hover {
  color: #d11f66;
}

/* SHOW GAME */

.show-row {
  margin: 3rem;
}

.show-cover {
  display: flex;
  justify-content: center;
}

.show-content-right {
  display: flex;
  flex-direction: column;
}

@media screen and (max-width: 767px) {
  .show-content-right {
    align-items: center;
  }
}

.show-title h1 {
  font-family: 'Nunito Sans', sans-serif;
  font-weight: 800;
  color: #d11f66;
  font-size: 65px;
}

@media screen and (max-width: 1125px) {
  .show-title h1 {
    font-size: 55px;
  }
}

@media screen and (max-width: 1125px) {
  .show-title h1 {
    font-size: 45px;
  }
}

@media screen and (max-width: 960px) {
  .show-title h1 {
    font-size: 35px;
  }
}

.show-price-no {
  font-family: 'Nunito Sans', sans-serif;
  font-weight: 800;
  font-size: 25px;
}

.show-content {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  align-items: flex-start;
  justify-content: baseline;
  margin-left: 2rem;
}

.show-user-buttons a {
  color: #f5f5f5;
  text-decoration: none;
}

.show-user-buttons a:hover {
  color: #d11f66;
}

/* BODY */

body {
  margin: 0;
  background-color: #171616;
  font-family: 'Nunito Sans', sans-serif;
  color: #f5f5f5;
}

/* FOOTER */

footer {
  position: absolute;
  width: 100vw;
  display: flex;
  justify-content: center;
  text-align: center;
  background-color: #312f2f;
  font-family: 'Nunito Sans', sans-serif;
  color: #f5f5f5;
  margin-top: 5rem;
  padding: 10px;
}

footer > div {
  flex: 1;
}

footer a {
  text-decoration: none;
  color: #f5f5f5;
}

footer a:hover {
  text-decoration: none;
  color: #d11f66;
}

